# TrustBehaviour

./: CMakeLists.txt
src/: CMakeLists.txt
src/trustBehaviour/: CMakeLists.txt
src/trustBehaviour/include/iCub/: trustBehaviourModule.h  trustBehaviourThread.h
src/trustBehaviour/src/: main.cpp  trustBehaviourModule.cpp  trustBehaviourThread.cpp
